--- a/nav.html
+++ b/nav.html
@@ -18,8 +18,9 @@
 
   <div class="inventory">
     <ul>
-      <li><a class="active" href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
+      <li><a href="#home">CDU Home</a></li>
+      <li><a href="#about">Courses</a></li>
+      <li><a href="#news">Faculties & Schools</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
