Signed-off-by: KahlZhang <473930123@qq.com>

--- a/nav.html
+++ b/nav.html
@@ -19,9 +19,12 @@
   <div class="inventory">
     <ul>
       <li><a href="#home">CDU Home</a></li>
-      <li><a href="#about">Courses</a></li>
-      <li><a href="#news">Faculties & Schools</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#courses">Courses</a></li>
+      <li><a href="#">Faculties & Schools</a></li>
+      <li><a href="#">Learning & Teaching</a></li>
+      <li><a href="#">Library</a></li>
+      <li><a href="#">Campuses & Centres</a></li>
+      <li><a href="#contact">Contact US</a></li>
       <li><a href="#about">About</a></li>
     </ul>
   </div>
