Signed-off-by: KahlZhang <473930123@qq.com>

--- a/nav.html
+++ b/nav.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="nav.css">
+  <meta charset="UTF-8">
+  <title>test</title>
+  <link rel="stylesheet" type="text/css" href="css/nav.css">
+  <script type="text/javascript" src="js/main.js"></script>
+  <!-- <script type="text/javascript" src="jquery-3.3.1.min.js"></script> -->
 </head>
 
 <body>
-  <div class="logo">
-    <img src="cdu_logo.png" alt="CDU_Logo">
-  </div>
-
-  <div class="search">
-    <input type="text" placeholder="Search..">
-  </div>
-
-
-  <div class="inventory">
-    <ul>
-      <li><a href="#home">CDU Home</a></li>
-      <li><a href="#courses">Courses</a></li>
-      <li><a href="#">Faculties & Schools</a></li>
-      <li><a href="#">Learning & Teaching</a></li>
-      <li><a href="#">Library</a></li>
-      <li><a href="#">Campuses & Centres</a></li>
-      <li><a href="#contact">Contact US</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
-  </div>
+      <div id="topnavcontainter">
+          <div id="topnav">
+              <div id="utility">
+                  <ul>
+                    <li> <a href="#"> sfsdfsdfsdsdfsdf </a> </li>
+                    <li><a href="#"> 标题 </a></li>
+                    <li><a href="#"> 标题 </a></li>
+                    <li><a href="#"> 标题 </a></li>
+                    <li><a href="#"> 标题 </a></li>
+                    <li><a href="#"> 标题 </a></li>
+                    <li><a href="#"> 标题 </a></li>
+                    <li class="last"><a href="#"> 标题 </a></li>
+                  </ul>
+              </div>
+            <a class="ico-key login" href="#">Login </a>
+          </div>
+      </div>
 
 
   <div class="Introduction">
