Signed-off-by: KahlZhang <473930123@qq.com>

--- a/nav.html
+++ b/nav.html
@@ -28,12 +28,41 @@
           </div>
       </div>
 
+      <div id="wrapper">
+        <div id="header">
 
-  <div class="Introduction">
-    <h1>Introduction to Critical Thinking</h1>
-    <p>Autonomous Vehicle (AV) or Artificial Intelligent Vehicle (AIV) are conveyances to move passengers without human interference. AIVs could be futuristic vehicles to replace the human-intervention vehicles and a step towards a new revolution of
-      ultramodern world. A new generation who does not have to contribute to pilot a vehicle by themselves. </p>
-  </div>
+          <div id="cdulogo">
+            <a href="nav.html">
+              <img width="208" height="120" alt="" src="images/title2.png">
+            </a>
+          </div>
+
+          <div id="search" style="width: auto">
+            <form id="search-form" style="width: auto" action="" method="post">
+              <div style="width: auto">
+                <input name="image" id="search-button" style="width: auto" type="image" alt="search" src="images/search.gif">
+                <br style="width: auto">
+                <select name="qtype" title="search options" id="qtype" style="width: auto">
+                  <option style="width: auto" selected="selected" value="course"> Courses </option>
+                  <option style="width: auto" value="unit"> Units </option>
+                  <option style="width: auto" value="staff"> Staff </option>
+                  <option style="width: auto" value="googlelocal"> CDU Web </option>
+                  <option style="width: auto" value="expertguide"> Expert Guide </option>
+                  <option style="width: auto" value="googlewww"> WWW </option>
+                </select>
+
+                <input name="query" id="query" style="width: auto"  type="text" alt="" placeholder="enter search term">
+                <input name="submit" class="button" id="submit" style="font-size: 10px; width: auto" type="submit" value="Go">
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div id="pagetitle">
+          <h1>标题一</h1>
+        </div>
+
+        
 
 </body>
 
