Signed-off-by: KahlZhang <473930123@qq.com>

--- a/nav.html
+++ b/nav.html
@@ -59,10 +59,11 @@
         </div>
 
         <div id="pagetitle">
-          <h1>标题一</h1>
+          <h1>Critical Thinking</h1>
         </div>
 
         
+
 
 </body>
 
