Signed-off-by: KahlZhang <473930123@qq.com>

--- a/nav.html
+++ b/nav.html
@@ -62,7 +62,406 @@
           <h1>Critical Thinking</h1>
         </div>
 
-        
+        <div id="contentwrap">
+          <!-- 左边目录 -->
+          <div id="content">
+            <p id="g1">The Academic Language and Learning Success Program (ALLSP) want to help you develop writing and study skills to make the most of your time at Charles Darwin University. The Study Skills website has guides to help you over the entire semester, from managing your time to checking your own work before you submit it.
+            </p>
+            <div class="content-left">
+              <div class="content-left1">
+                <div class="content-left-top" onclick="fun1()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button>sdfsdfsdsd1
+                    <span id="s1">+</span>
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap1" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+
+
+                <div class="content-left-top" onclick="fun3()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button>sdfsdfsdsd3
+                    <span id="s3">+</span>
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap3" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="content-left-top" onclick="fun5()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button>sdfsdfsdsd5
+                    <span id="s5">+</span>
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap5" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="content-left-top" onclick="fun7()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button>sdfsdfsdsd7
+                    <span id="s7">+</span>
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap7" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="content-left-top" onclick="fun9()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button>sdfsdfsdsd9
+                    <span id="s9">+</span>
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap9" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="content-right">
+              <div class="content-left1">
+                <div class="content-left-top" onclick="fun2()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button><span id="s2">+</span>&nbsp;sdfsdfsdsd2
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap2" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="content-left-top" onclick="fun4()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button><span id="s4">+</span>&nbsp;sdfsdfsdsd4
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap4" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="content-left-top" onclick="fun6()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button><span id="s6">+</span>&nbsp;sdfsdfsdsd6
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap6" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="content-left-top" onclick="fun8()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button><span id="s8">+</span>&nbsp;sdfsdfsdsd8
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap8" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+
+                <div class="content-left-top" onclick="fun10()">
+                  <!-- <img src="images/content-left1.jpg" width="314" height="62" alt=""/> -->
+                  <button><span id="s10">+</span>&nbsp;sdfsdfsdsd10
+                  </button>
+                </div>
+
+                <div class="content-left-wrap content-left-wrap10" style="display: none;">
+                  <div>
+                    <p>gdfgdfgdfg</p>
+                    <ul>
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                      <li>fgdfgdfg
+                        <ul>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                          <li><a href="#">dsfsdfsdf</a></li>
+                        </ul>
+                      </li>
+
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
 
 </body>
