Signed-off-by: KahlZhang <473930123@qq.com>

--- a/nav.html
+++ b/nav.html
@@ -63,7 +63,7 @@
         </div>
 
         <div id="contentwrap">
-          <!-- 左边目录 -->
+          <!-- Left Nav -->
           <div id="content">
             <p id="g1">The Academic Language and Learning Success Program (ALLSP) want to help you develop writing and study skills to make the most of your time at Charles Darwin University. The Study Skills website has guides to help you over the entire semester, from managing your time to checking your own work before you submit it.
             </p>
