--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>test</title>
   <link rel="stylesheet" type="text/css" href="css/nav.css">
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/nav.js"></script>
   <!-- <script type="text/javascript" src="jquery-3.3.1.min.js"></script> -->
 </head>
 
