Signed-off-by: KahlZhang <473930123@qq.com>

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>test</title>
-  <link rel="stylesheet" type="text/css" href="css/nav.css">
-  <script type="text/javascript" src="js/nav.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <script type="text/javascript" src="js/main.js"></script>
   <!-- <script type="text/javascript" src="jquery-3.3.1.min.js"></script> -->
 </head>
 
@@ -32,7 +32,7 @@
         <div id="header">
 
           <div id="cdulogo">
-            <a href="nav.html">
+            <a href="index.html">
               <img width="208" height="120" alt="" src="images/title2.png">
             </a>
           </div>
