Signed-off-by: KahlZhang <473930123@qq.com>

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
         <div id="sidebar">
           <div id="sidebarnav">
             <div class="sidebarnav-wrap">
-              <p><a href="#">Study Skills Home</a></p>
+              <p><a href="#">Critical Thinking Home</a></p>
               <div class="content-right-top" onclick="fun11()">
                 <a href="#"><img src="images/tmm_east_black.gif" alt="" id="img1"><b>1</b></a>
               </div>
