make the navigation work
Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                 <ul class="main-nav">
                       <li>
                           <img src="home.png" class="logo-mini">
-                          <a href="#">CDU HOME</a>
+                          <a href="https://www.cdu.edu.au/">CDU HOME</a>
                       </li>
                       <li>
                           <img src="library.png" class="logo-mini">
-                          <a href="#">LIBRARY</a>
+                          <a href="https://www.cdu.edu.au/library/">LIBRARY</a>
                       </li>
                       <li>
                           <img src="person.png" class="logo-mini">
-                          <a href="#">Current Students</a>
+                          <a href="https://www.cdu.edu.au/current-students">Current Students</a>
                       </li>
                       <li>
                           <img src="key.png" class="last-mini-logo">
-                          <a href="#">Learnline Login</a>
+                          <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
                       </li>
                 </ul>
           </nav>
