add javascript code to make the nav bar more responsive
Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
 
 
+
     <!-- CSS for only ICON resources just for faster style icon image -->
 
 
@@ -43,7 +44,7 @@
           </nav>
       </div>
      </section>
-     <section class="section-style">
+     <section class="section-style js--section-style">
              <div class="widthsize">
                  <h2>Introduction to critical thinking</h2>
                  <p class="long-copy">
@@ -142,5 +143,9 @@
 
  </footer>
 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ <script src="js/jquery.waypoints.min.js"></script>
+ <script src="js/main.js"></script>
 
+</body>
 </html>
