--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <div class="widthsize">
       <nav>
         <ul class="main-nav">
+
+
+
+
+
           <li>
             <img src="home.png" class="logo-mini">
             <a href="https://www.cdu.edu.au/">CDU HOME</a>
@@ -39,7 +44,30 @@
             <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
           </li>
         </ul>
+
+
+
       </nav>
+
+      <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicassignments.html">Academic Assignments</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicwriting.html">Academic Writing</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introcriticalthinking.html">Critical Thinking</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreferencing.html">Referencing</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introexams.html">Exams</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introlecturestutorials.html">Lectures and Tutorials</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intronotemaking.html">Note Making</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreadingresearch.html">Research and Reading</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intromanagingstudies.html">Managing Your Studies</a>
+        <a href="http://learnline.cdu.edu.au/studyskills/studyskills/videoresources.html">Videos and Interactives</a>
+
+      </div>
+
+      <div id="main">
+        <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
+      </div>
+
     </div>
   </section>
   <section class="section-style js--section-style">
@@ -71,16 +99,16 @@
           <div class="card">
 
             <div class="icon"><i class="material-icons md-36">face</i></div>
-            <p class="title">Profile</p>
-            <p class="container">Click to see or edit your profile page.</p>
+            <p class="title">Critical Thinking Skills</p>
+            <p class="container">Learn More.</p>
 
           </div>
 
           <div class="card">
 
             <div class="icon"><i class="material-icons md-36">favorite_border</i></div>
-            <p class="title">Favourites</p>
-            <p class="container">Check all your favourites in one place.</p>
+            <p class="title">Reading Critical</p>
+            <p class="container">Learn More.</p>
 
           </div>
 
@@ -94,8 +122,16 @@
           <div class="card">
 
             <div class="icon"><i class="material-icons md-36">face</i></div>
-            <p class="title">Profile</p>
-            <p class="container">Click to see or edit your profile page.</p>
+            <p class="title">For Academic Writing</p>
+            <p class="container">Learn More.</p>
+
+          </div>
+
+          <div class="card">
+
+            <div class="icon"><i class="material-icons md-36">face</i></div>
+            <p class="title">Tutorial and seminer presentation</p>
+            <p class="container">Learn More.</p>
 
           </div>
 
@@ -103,15 +139,7 @@
 
             <div class="icon"><i class="material-icons md-36">face</i></div>
             <p class="title">Profile</p>
-            <p class="container">Click to see or edit your profile page.</p>
-
-          </div>
-
-          <div class="card">
-
-            <div class="icon"><i class="material-icons md-36">face</i></div>
-            <p class="title">Profile</p>
-            <p class="container">Click to see or edit your profile page.</p>
+            <p class="container">Learn More.</p>
 
           </div>
         </div>
