--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8">
   <title>CDUcriticalthinking</title>
   <link rel="stylesheet" href="ionicons.min 2.css" type="text/css">
   <link rel="stylesheet" href="css/main.css" type="text/css">
-
-
 </head>
 
 <body>
@@ -22,11 +19,6 @@
     <div class="widthsize">
       <nav>
         <ul class="main-nav">
-
-
-
-
-
           <li>
             <img src="home.png" class="logo-mini">
             <a href="https://www.cdu.edu.au/">CDU HOME</a>
@@ -44,9 +36,6 @@
             <a href="https://online.cdu.edu.au/webapps/portal/execute/tabs/tabAction?tab_tab_group_id=_3_1">Learnline Login</a>
           </li>
         </ul>
-
-
-
       </nav>
 
       <div id="mySidebar" class="sidebar">
@@ -61,15 +50,14 @@
         <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introreadingresearch.html">Research and Reading</a>
         <a href="http://learnline.cdu.edu.au/studyskills/studyskills/intromanagingstudies.html">Managing Your Studies</a>
         <a href="http://learnline.cdu.edu.au/studyskills/studyskills/videoresources.html">Videos and Interactives</a>
-
       </div>
 
       <div id="main">
         <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
       </div>
-
     </div>
   </section>
+
   <section class="section-style js--section-style">
     <div class="widthsize">
       <h2>Introduction to critical thinking</h2>
@@ -92,59 +80,63 @@
     </div>
   </section>
 
+
+
+
+
   <section>
     <div class="container">
       <div class="margin">
         <div class="card-wrapper">
           <div class="card">
-
-            <div class="icon"><i class="material-icons md-36">face</i></div>
+            <img src="card2.png" alt="Avatar" style="width:100%">
+            <div class="icon"><i class="material-icons md-36">Critical Thinking Skills</i></div>
             <p class="title">Critical Thinking Skills</p>
             <p class="container">Learn More.</p>
-
           </div>
 
           <div class="card">
-
-            <div class="icon"><i class="material-icons md-36">favorite_border</i></div>
+            <img src="card1.jpg" alt="Avatar" style="width:100%">
+            <div class="icon"><i class="material-icons md-36">Reading Critical</i></div>
             <p class="title">Reading Critical</p>
             <p class="container">Learn More.</p>
-
           </div>
 
           <div class="video">
-            <video width="450" height="260" controls>
+            <video width="450" height="370" controls>
               <source src="video.mp4" type="video/mp4">
             </video>
           </div>
         </div>
+
         <div class="card-wrapper-2">
           <div class="card">
-
-            <div class="icon"><i class="material-icons md-36">face</i></div>
+            <img src="card3.jpg" alt="Avatar" style="width:100%">
+            <div class="icon"><i class="material-icons md-36">For Academic Writing</i></div>
             <p class="title">For Academic Writing</p>
             <p class="container">Learn More.</p>
-
           </div>
 
           <div class="card">
-
-            <div class="icon"><i class="material-icons md-36">face</i></div>
+            <img src="card4.jpg" alt="Avatar" style="width:100%">
+            <div class="icon"><i class="material-icons md-36">Tutorial and seminer presentation</i></div>
             <p class="title">Tutorial and seminer presentation</p>
             <p class="container">Learn More.</p>
-
           </div>
 
           <div class="card">
-
             <div class="icon"><i class="material-icons md-36">face</i></div>
             <p class="title">Profile</p>
             <p class="container">Learn More.</p>
-
           </div>
         </div>
       </div>
   </section>
+
+
+
+
+
 
 
 
