Signed-off-by: KahlZhang <473930123@qq.com>

--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>CDUcriticalthinking</title>
-  <link rel="stylesheet" href="ionicons.min 2.css" type="text/css">
   <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 
 <body>
-  <header>
+<header>
     <div class="widthsize">
       <img src="title.png" alt="CDU logo" class="logo">
       <input type="text" placeholder="Search ..." class="searchbar">
     </div>
-  </header>
-  <section>
-    <div class="widthsize">
+</header>
+
+<section>
+  <div class="widthsize">
       <nav>
         <ul class="main-nav">
           <li>
@@ -29,7 +28,7 @@
           </li>
           <li>
             <img src="person.png" class="logo-mini">
-            <a href="https://www.cdu.edu.au/current-students">Current Students</a>
+            <a href="https://www.cdu.edu.au/current-students">CURRENT STUDENTS</a>
           </li>
           <li>
             <img src="key.png" class="last-mini-logo">
@@ -55,92 +54,125 @@
       <div id="main">
         <button class="openbtn" onclick="openNav()">☰ Study Skills Home</button>
       </div>
-    </div>
-  </section>
 
-  <section class="section-style js--section-style">
+    </div>
+</section>
+
+<section class="section-style js--section-style">
     <div class="widthsize">
       <h2>Introduction to critical thinking</h2>
       <p class="long-copy">
         One of the most important aspects of academic work is the ability to think critically about what you read, what you write and what you are told. Rather than accept all information as truth, you need to test the validity of others’
         standpoints in order to arrive at your own point of view.
       </p>
-
       <p class="long-copy">
-
         When you think critically, you are being active; you are not passively accepting everything you read and hear, but questioning, evaluating, making judgements, finding connections and categorising. Critical thinking is necessary in order to
         form judgements in lectures and tutorials; when reading and when writing assignments.
-
         You will find information on how to apply critical thinking to your tasks at university in this section.
       </p>
       <p class="long-copy">
-
         If you would like further information, please contact staff from the Academic Language and Learning Success Program (ALLSP), who run free workshops for internal and external students on all academic skills.
       </p>
     </div>
   </section>
 
-
-
-
-
-  <section>
-    <div class="container">
-      <div class="margin">
-        <div class="card-wrapper">
-          <div class="card">
-            <img src="card2.png" alt="Avatar" style="width:100%">
-            <div class="icon"><i class="material-icons md-36">Critical Thinking Skills</i></div>
-            <p class="title">Critical Thinking Skills</p>
-            <p class="container">Learn More.</p>
-          </div>
-
-          <div class="card">
-            <img src="card1.jpg" alt="Avatar" style="width:100%">
-            <div class="icon"><i class="material-icons md-36">Reading Critical</i></div>
-            <p class="title">Reading Critical</p>
-            <p class="container">Learn More.</p>
-          </div>
-
-          <div class="video">
-            <video width="450" height="370" controls>
-              <source src="video.mp4" type="video/mp4">
-            </video>
-          </div>
-        </div>
-
-        <div class="card-wrapper-2">
-          <div class="card">
-            <img src="card3.jpg" alt="Avatar" style="width:100%">
-            <div class="icon"><i class="material-icons md-36">For Academic Writing</i></div>
-            <p class="title">For Academic Writing</p>
-            <p class="container">Learn More.</p>
-          </div>
-
-          <div class="card">
-            <img src="card4.jpg" alt="Avatar" style="width:100%">
-            <div class="icon"><i class="material-icons md-36">Tutorial and seminer presentation</i></div>
-            <p class="title">Tutorial and seminer presentation</p>
-            <p class="container">Learn More.</p>
-          </div>
-
-          <div class="card">
-            <div class="icon"><i class="material-icons md-36">face</i></div>
-            <p class="title">Profile</p>
-            <p class="container">Learn More.</p>
-          </div>
+<section>
+  <div  class="d1">
+    <div class="tile">
+      <img src="1.jpg"/>
+      <div class="text">
+        <h1>Critical thinking at university</h1>
+        <p class="animate-text">Students often ask why critical thinking is required at university and what it means to be a critical thinker. Critical thinking has been variously defined but the following <b>two</b> definitions may help you to understand it better.</p>
+        <h4 class="animate-text"><a href="http://learnline.cdu.edu.au/studyskills/studyskills/criticalthinking.html">Read More</a></h4>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
-  </section>
+    </div>
 
+    <div class="tile">
+      <img src="2.jpg"/>
+      <div class="text">
+        <h1>Critical thinking as a tool for decision making</h1>
+        <p class="animate-text">Weighing up alternatives in order to make decisions is part of the critical thinking process. For example, think about the  following activities and ask yourself what strategies you would use to come to a decision about:</p>
+        <h4 class="animate-text"><a href="http://learnline.cdu.edu.au/studyskills/studyskills/criticalthinking.html">Read More</a></h4>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
 
+    <div class="tile">
+      <img src="3.jpg"/>
+      <div class="text">
+        <h1>What does critical thinking involve</h1>
+        <p class="animate-text">Critical thinking involves <b>active</b> involvement.At university you are asked to think critically when you <b>read academic texts</b>, when you <b>write academic assignments</b> and when you present in  tutorials or seminars.</p>
+        <h4 class="animate-text"><a href="http://learnline.cdu.edu.au/studyskills/studyskills/criticalthinking.html">Read More</a></h4>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
 
+    <div class="tile">
+      <img src="4.jpg"/>
+      <div class="text">
+        <h1>Reading critically</h1>
+        <p class="animate-text">One of the key strategies you can use when reading critically is to ask yourself a series of questions. Begin by asking questions which relate to the text overall and then look at the author’s argument and the evidence used to support it.</p>
+        <h4 class="animate-text"><a href="http://learnline.cdu.edu.au/studyskills/studyskills/criticalthinking.html">Read More</a></h4>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
 
+    <div class="tile">
+      <img src="5.jpg"/>
+      <div class="text">
+        <h1>Critical thinking for academic writing</h1>
+        <p class="animate-text">When writing at university, your aim is to convince the reader by using critical thinking to promote your argument. Ask yourself the following questions when you are planning and writing your first draft.</p>
+        <h4 class="animate-text"><a href="http://learnline.cdu.edu.au/studyskills/studyskills/criticalthinking.html">Read More</a></h4>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
 
-
-
-
-  <footer>
+    <div class="tile">
+      <img src="6.png"/>
+      <div class="text">
+        <h1>Critical thinking underpinning tutorial/seminar presentations</h1>
+        <p class="animate-text">Before giving a presentation it is vital to consider your purpose, the needs of your audience and how best to research and present the topic.</p>
+        <h4 class="animate-text"><a href="http://learnline.cdu.edu.au/studyskills/studyskills/criticalthinking.html">Read More</a></h4>
+        <div class="dots">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="video_wrap">
+  <div>
+    <div class="video">
+      <video width="450" height="260" controls>
+        <source src="video.mp4" type="video/mp4">
+      </video>
+    </div>
+  </div>
+</section>
+<footer>
     <div class="widthsize">
       <div>
         <ul class="social-links">
@@ -148,23 +180,18 @@
           <li><a href="https://twitter.com/cduni?lang=en"> <img src="twiiter.png" class="logo-mini"></a></li>
           <li><a href="https://www.instagram.com/charlesdarwinuniversity/?hl=en"> <img src="instagram.png" class="logo-mini"></a></li>
         </ul>
-
       </div>
-
-
       <div class="widthsize">
         <p>
           Copyright: 2019 by CDU. ALL right reserve
         </p>
-
       </div>
-
-  </footer>
+    </div>
+</footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/jquery.waypoints.min.js"></script>
   <script src="js/main.js"></script>
 
 </body>
-
 </html>
