Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
 </head>
 
 <body>
+
+<!--header contain logo and search bar-->
 <header>
     <div class="widthsize">
       <img src="title.png" alt="CDU logo" class="logo">
       <input type="text" placeholder="Search ..." class="searchbar">
     </div>
 </header>
+
+<!--header section end-->
+
 
 <section>
   <div class="widthsize">
