Signed-off-by: Jeff123Kam <s307746@students.cdu.edu.au>

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!--header section end-->
 
-
+<!-- main navigation section-->
 <section>
   <div class="widthsize">
       <nav>
@@ -42,6 +42,10 @@
         </ul>
       </nav>
 
+<!-- main navigation section-->
+
+<!--isidebar section-->
+
       <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="http://learnline.cdu.edu.au/studyskills/studyskills/introacademicassignments.html">Academic Assignments</a>
@@ -62,7 +66,10 @@
 
     </div>
 </section>
+<!--isidebar section end-->
 
+
+<!--Introduction nad parpgraph section-->
 <section class="section-style js--section-style">
     <div class="widthsize">
       <h2>Introduction to critical thinking</h2>
@@ -80,6 +87,10 @@
       </p>
     </div>
   </section>
+
+  <!--Introduction nad parpgraph section end-->
+
+  <!-- all the card contents-->
 
 <section>
   <div class="container">
@@ -141,6 +152,8 @@
     </div>
   </div>
 </section>
+
+<!-- all the card contents end-->
 
 <footer>
     <div class="widthsize">
